# simetri

./: README.md  gallery.ipynb  pyproject.toml
Bridges_2026/Basegmez_SoPF_Supplement/: Basegmez_SoPF_Supplement.qmd  Basegmez_SoPF_supplement.html
Bridges_2026/SoPF_Supplement/: Basegmez_SoPF_supplement.html
Bridges_2026/bridges_2026_ver_0_0_6_alpha/: Basegmez_SoPF_Supplement_ver_0_0_6_alpha.html  Basegmez_SoPF_Supplement_ver_0_0_6_alpha.qmd
docs/: brief_overview.ipynb  linpath_doc2.ipynb  start_here.ipynb  working_with_batches.ipynb
docs/source/: conf.py  index.rst  modules.rst  simetri.canvas.rst  simetri.image.rst  simetri.notebook.rst  simetri.rst  simetri.stars.rst
gallery/: examples.ipynb  logo_frieze.ipynb  segment1.ipynb
src/simetri/: .gitignore  __init__.py
src/simetri/canvas/: canvas.py  draw.py  grids.py  style_map.py
src/simetri/colors/: __init__.py  colors.py  palettes.py  pastels.py  swatches.py
src/simetri/extensions/: easing.py  kolam.py  l_system.py  ndfsm.py  svg.py  tree.py  turtle_sg.py
src/simetri/frieze/: frieze.py  frieze_patterns.py
src/simetri/geometry/: bezier.py  circle.py  ellipse.py  geometry.py  hobby.py  sine.py  vectors.py
src/simetri/graphics/: __init__.py  affine.py  all_enums.py  batch.py  bbox.py  common.py  core.py  dots.py  mask.py  merge.py  path.py  pattern.py  points.py  shape.py  shape.pyi  shapes.py  sketch.py
src/simetri/helpers/: constraint_solver.py  file_operations.py  geometry.py  graph.py  illustration.py  modifiers.py  utilities.py  validation.py  vector.py
src/simetri/image/: image.py  image.pyi
(+22 files in other folders)
