[project]
name = "simetri"
version = "0.0.8"
description = "simetri is a Python library for creating and manipulating patterns."
readme = "README.md"
authors = [
    { name = "Fahri Basegmez", email = "mangabasi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "coloraide; python_version > '3.10'",
    "colorspace; python_version > '3.10'",
    "ipykernel>=6.30.1",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pillow>=12.1.1",
    "pymupdf>=1.25.1",
    "pypdf>=5.9.0",
    "scipy>=1.13.1",
    "strenum>=0.4.15",
    "typing-extensions>=4.12.2",
    "urllib3>=2.6.0",

]

[project.scripts]
simetri = "simetri:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv2 License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Computational Geometry :: 2D Symmetry :: Pattern Design",
]

[project.urls]
Homepage = "https://github.com/mekanimo/simetri.graphics"

[tool.ruff]
line-length = 88
ignore = ["F405", "F403", "F401", "F821"]


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "twine>=6.1.0",
]
